--- a/src/app/components/emotionalswiper/emotionalswiper.component.html
+++ b/src/app/components/emotionalswiper/emotionalswiper.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="trauma">
           <h4 [innerHTML]="hservice.title.rendered"></h4> 
-           <!-- <div [innerHTML]="hservice.excerpt.rendered"></div> -->
+           <div [innerHTML]="hservice.excerpt.rendered"></div>
           <a class="more-link button" [routerLink]="['/services', hservice.slug]">Read more</a>
         </div>
       </div>
