--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -280,11 +280,8 @@
     <section class=" into-section">
         <div class="container">
             <div class="wellness-header" data-aos="fade-up" data-aos-duration="100">
-                <h3>Emotional Healing and Personal Growth</h3>
-                <p>Take the next step in your healing journey. Reclaim Your Best Life
-                    is a powerful guide to emotional healing, trauma recovery, and building
-                    a life of
-                    confidence, peace, and purpose.</p>
+                <h3>A Journey from Healing to Happiness</h3>
+                <p>Take the next step in your healing journey. With compassion and understanding, this space supports you in processing emotional pain, recovering from trauma, and gently moving toward a life filled with confidence, peace, and purpose.</p>
             </div>
             <app-emotionalswiper />
             <div class="progress-content">
