--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -23,10 +23,10 @@
                     <p>Kenny has a unique ability to see what everyone else has missed. He imparts immediate, deep
                         wisdom which generates innovative, transformative solutions to achieve rapid results while
                         allowing each individual to pursue their journey at their own pace and without judgment.</p>
-                    <br><br>
+                    <br>
                     <p class="bold">Your most important relationship is with you so Kenny teaches you to master your
                         emotions because you deserve to love yourself.</p>
-                    <br><br>
+                    <br>
                     <h4>The core of the Greatness Movement is based on two fundamental pillars.</h4>
                     <br>
                     <p>1. Providing everyone the knowledge, skills, and tools to be The Greatest Version of
@@ -38,8 +38,8 @@
                         these new skills and tools.</p>
 
                     <div class="button-row">
-                        <a class=" button" routerLink="/courses" target="">Begin Here</a>
-                        <a class="button" href="https://direct.me/kennyweiss" target="_blank">Start Your Journey</a>
+                        <a class=" button" routerLink="/courses" target="">Explore the Emotional Authenticity Method</a>
+                        <a class="button" routerLink="/book-session" target="_blank">Book a Call with Kenny</a>
                     </div>
 
                 </div>
