--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -74,7 +74,7 @@
                                         <img src="images/16.jpeg" loading="lazy" alt="">
                                     </div>
                                     <div class="lower-content">
-                                        <h6>kenny Weiss</h6>
+                                        <h6>Kenny Weiss</h6>
                                         <div class="text">
                                             <p>Kenny Weiss believes if he is going to teach it, he must first live it
                                                 and learn from it.</p>
