--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -176,7 +176,7 @@
                             </li>
                             <li data-aos="fade-up" data-aos-duration="400">
                                 <span class="iconlist"><img src="images/creator.png" loading="lazy" alt=""></span>
-                                <p> Creator of Emotional Mastery method </p>
+                                <p> Creator of Emotional authenticity  method </p>
                             </li>
                             <li data-aos="fade-up" data-aos-duration="500">
                                 <span class="iconlist"><img src="images/conference.png" loading="lazy" alt=""></span>
@@ -276,7 +276,7 @@
                             <h4>The Greatness Movement</h4>
                             <p>What began as a personal mission evolved into a global movement. Kenny founded The
                                 Greatness Movement to guide others through their own journey of healing, emotional
-                                mastery, and empowered living.</p><br>
+                                authenticity , and empowered living.</p><br>
                             <p>👉 It’s not just a story. It’s a path anyone can follow — because greatness is
                                 already within you. You just need the tools to unlock it.</p>
                         </div>
