--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -171,7 +171,21 @@ a.button.mt3 {
     margin-bottom: 15px;
     font-weight: bold;
 }
-
+.contentsocialserd ul.wp-block-social-links
+ {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.contentsocialserd ul.wp-block-social-links li a svg {
+    width: 35px;
+    height: 35px;
+}
+.contentsocialserd ul.wp-block-social-links li a span.wp-block-social-link-label
+ 
+ {
+    display: none;
+}
 .mentor-content h2 span {
     color: #3b1f5b;
 }
