--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -8,13 +8,10 @@
             </div>
             <div class="contactflexform">
                 <div class="leftcontactimg">
-                    <img src="images/others-img2.png">
+                    <img src="images/11.jpeg">
                 </div>
 
-                <div class="form">
-
-
-
+                <div class="form">  
                     <div *ngIf="formSuccess" class="success-message">
                         Thank you! Your message has been sent successfully.
                     </div>
