--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -57,7 +57,7 @@
             <div class="container">
                 <div class="card-row green" data-aos="fade-up" data-aos-duration="1500">
                     <div class="card-image-grey-bg">
-                        <img src="images/afro-american-business-woman.jpeg"  class="image-c" loading="lazy" alt="">
+                        <img src="images/2.jpeg"  class="image-c" loading="lazy" alt="">
                     </div>
                     <div class="card-content-grey-bg">
                         <h3>Your Journey to Being Yourself</h3>
