--- a/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
+++ b/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
@@ -58,7 +58,7 @@
 
                     <div class="images">
                         <div class="img1"><img src="images/1.jpeg" alt="Group Coaching" loading="lazy"></div>
-                        <div class="img2"><img src="images/leadership-collaboration.jpeg" alt="Workshop Session" loading="lazy"></div>
+                        <div class="img2"><img src="images/15.jpeg" alt="Workshop Session" loading="lazy"></div>
                         <div class="decor"></div>
                     </div>
                 </div>
