--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -166,7 +166,7 @@
                                         <h5>Sponsor Adds</h5>
                                     </div>
                                     <div class="add-image">
-                                        <img src="images/add.jpeg" loading="lazy" alt="">
+                                        <img src="images/11.jpeg" loading="lazy" alt="">
                                         <div class="add-size">270x240</div>
                                     </div>
                                 </div>
